# FinReportDataAgent

./: .env.example  .gitignore  README copy.md  README.md  docker-compose.yml  pyproject.toml  template.py
app/: __init__.py  dependencies.py  main.py
app/api/: __init__.py  doc_api.py  report_api.py  search_api.py  session_api.py
app/common/: __init__.py  logger.py
app/config/: __init__.py  paths.py  settings.py
app/core/: __init__.py
app/core/agent/: __init__.py  events.py  graph.py  llm_capture.py  query_guard.py  runner.py  state.py
app/core/ingestion/: __init__.py  chunker.py  meta_extractor.py  parser.py  updater.py
app/core/retrieval/: __init__.py  base.py  bm25_retriever.py  dense_retriever.py  ensemble.py  es_retriever.py  fusion.py  meta_dense_retriever.py  meta_ensemble.py  meta_keyword_retriever.py  (+2 more)
app/infrastructure/: __init__.py  chroma_bootstrap.py  chroma_lock.py  chroma_telemetry.py  embedding_service.py  es_client.py  hf_hub_config.py  llm_client.py  llm_warmup.py  vector_client.py
app/schemas/: __init__.py  document.py  metrics.py  query.py  session.py  structured.py
eval/: __init__.py  gen_testset.py  rag_metric_eval.py  retrieval_eval_utils.py  retrieval_weight_eval.py  评测检索权重.md
frontend/: index.html
scripts/: __init__.py  benchmark_llm.py  check_chroma_import.py  check_docker_registry.py  check_es_health.py  check_hf_hub.py  monitor.py  reset_chroma_chunks.py  run_query_capture_llm.py  score_chunk_query.py  test_chroma_upsert.py
scripts/prompt_debug/: common.py  run_data_processor.py  run_planner.py  run_reporter.py
(+46 files in other folders)
