[tool.poetry]
name = "knowledge_rag_system"
version = "0.1.0"
description = "Configurable Hybrid-RAG + LangGraph Agent for enterprise knowledge base"
authors = ["LZ <LZ@118.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
# FastAPI基础服务
fastapi = "0.109.2"
uvicorn = "0.27.1"
pydantic = "2.7.4"
pydantic-settings = "2.4.0"
python-multipart = "0.0.9"
python-dotenv = "1.0.1"

# Agent框架
langgraph = "0.2.27"
langchain = "0.2.10"
langchain-openai = "0.1.14"

# 文档解析（parser.py 使用 pypdf + python-docx；不引入 docling 以避免 Windows 路径过长）
python-docx = "1.2.0"
pypdf = "4.2.0"

# 检索引擎
elasticsearch = "8.13.0"
chromadb = "0.5.4"

# Embedding/Rerank
transformers = "4.48.2"
torch = "^2.6.0"
sentence-transformers = "3.3.1"

# 结构化数据
pandas = "2.2.3"
pyarrow = "17.0.0"
openpyxl = "3.1.5"
pyxlsb = "1.0.10"
duckdb = "1.1.3"
matplotlib = "3.9.4"

# 目录监听
watchdog = "4.0.1"

# 日志
loguru = "0.7.3"

# RAG指标评测
ragas = "0.1.10"

# 可选缓存
redis = "5.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"